
MATPOWER
$Id$
Copyright (c) 1996-2010 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.0b5
-------------------

12/15/10
    - Fixed bug in qps_cplex() where an infeasible problem resulted
      in a fatal error.
    - Fixed bug in qps_mosek() where exit flag was indicating success
      for infeasible solutions.


Changes since 4.0b4
-------------------

12/13/10
    - Released version 4.0b5.

12/2/10
    - Added to opf_setup() a better check on when specified generalized
      cost parameters are compatible with DC OPF.
    - Improved output of t_is(). Includes only elements violating
      tolerance.

11/30/10
    - Fixed bug in opf_execute() related to automatic conversion of
      single-block piecewise linear costs to linear polynomial costs.
      Affected indexing of the Va, Vm, Pg and Qg portions of
      results.x and raw.xr.

11/24/10
    - Added support for the MOSEK optimizer for large-scale linear and
      quadratic programming. To use MOSEK for the DC OPF, set
      OPF_ALG_DC = 600. Specific LP algorithms can be selected by
      the MOSEK_LP_ALG option. Requires the Matlab interface for MOSEK,
      available from http://www.mosek.com/.
    - Added function qps_mosek() for solving QP and LP problems using
      the common QP solver interface used in MATPOWER. The qps_matpower()
      function also includes the option to use MOSEK.

11/16/10
    - Fixed bug in opf_setup() where indexing data for branch angle
      difference limits was not being saved in the case of DC OPF.
    - Added support for the IBM ILOG CPLEX optimizer for
      large scale linear and quadratic programming. To use CPLEX
      for the DC OPF, set OPF_ALG_DC = 500 and choose the specific
      CPLEX solver using options CPLEX_LPMETHOD and CPLEX_QPMETHOD.
      Requires the Matlab interface for CPLEX, available from
      http://www.ibm.com/software/integration/optimization/cplex-optimizer/.