@@ -216,37 +216,52 @@ end
 [x, f, info, output, lambda] = qps_matpower(HH, CC, A, l, u, xmin, xmax, x0, opt);
 success = (info == 1);
 
-%% update solution data
-Va = x(vv.i1.Va:vv.iN.Va);
-Pg = x(vv.i1.Pg:vv.iN.Pg);
-f = f + C0;
-
 %%-----  calculate return values  -----
-%% update voltages & generator outputs
-bus(:, VA) = Va * 180/pi;
-gen(:, PG) = Pg * baseMVA;
+if success || ~isempty(x)
+    %% update solution data
+    Va = x(vv.i1.Va:vv.iN.Va);
+    Pg = x(vv.i1.Pg:vv.iN.Pg);
+    f = f + C0;
 
-%% compute branch flows
-branch(:, [QF, QT]) = zeros(nl, 2);
-branch(:, PF) = (Bf * Va + Pfinj) * baseMVA;
-branch(:, PT) = -branch(:, PF);
+    %% update voltages & generator outputs
+    bus(:, VA) = Va * 180/pi;
+    gen(:, PG) = Pg * baseMVA;
 
-%% package up results
-mu_l = lambda.mu_l;
-mu_u = lambda.mu_u;
-muLB = lambda.lower;
-muUB = lambda.upper;
+    %% compute branch flows
+    branch(:, [QF, QT]) = zeros(nl, 2);
+    branch(:, PF) = (Bf * Va + Pfinj) * baseMVA;
+    branch(:, PT) = -branch(:, PF);
+end
 
-%% update Lagrange multipliers
-il = find(branch(:, RATE_A) ~= 0 & branch(:, RATE_A) < 1e10);
-bus(:, [LAM_P, LAM_Q, MU_VMIN, MU_VMAX]) = zeros(nb, 4);
-gen(:, [MU_PMIN, MU_PMAX, MU_QMIN, MU_QMAX]) = zeros(size(gen, 1), 4);
-branch(:, [MU_SF, MU_ST]) = zeros(nl, 2);
-bus(:, LAM_P)       = (mu_u(ll.i1.Pmis:ll.iN.Pmis) - mu_l(ll.i1.Pmis:ll.iN.Pmis)) / baseMVA;
-branch(il, MU_SF)   = mu_u(ll.i1.Pf:ll.iN.Pf) / baseMVA;
-branch(il, MU_ST)   = mu_u(ll.i1.Pt:ll.iN.Pt) / baseMVA;
-gen(:, MU_PMIN)     = muLB(vv.i1.Pg:vv.iN.Pg) / baseMVA;
-gen(:, MU_PMAX)     = muUB(vv.i1.Pg:vv.iN.Pg) / baseMVA;
+if success || ~isempty(lambda)
+    %% package up results
+    mu_l = lambda.mu_l;
+    mu_u = lambda.mu_u;
+    muLB = lambda.lower;
+    muUB = lambda.upper;
+
+    %% update Lagrange multipliers
+    il = find(branch(:, RATE_A) ~= 0 & branch(:, RATE_A) < 1e10);
+    bus(:, [LAM_P, LAM_Q, MU_VMIN, MU_VMAX]) = zeros(nb, 4);
+    gen(:, [MU_PMIN, MU_PMAX, MU_QMIN, MU_QMAX]) = zeros(size(gen, 1), 4);
+    branch(:, [MU_SF, MU_ST]) = zeros(nl, 2);
+    bus(:, LAM_P)       = (mu_u(ll.i1.Pmis:ll.iN.Pmis) - mu_l(ll.i1.Pmis:ll.iN.Pmis)) / baseMVA;
+    branch(il, MU_SF)   = mu_u(ll.i1.Pf:ll.iN.Pf) / baseMVA;
+    branch(il, MU_ST)   = mu_u(ll.i1.Pt:ll.iN.Pt) / baseMVA;
+    gen(:, MU_PMIN)     = muLB(vv.i1.Pg:vv.iN.Pg) / baseMVA;
+    gen(:, MU_PMAX)     = muUB(vv.i1.Pg:vv.iN.Pg) / baseMVA;
+    pimul = [
+      mu_l - mu_u;
+     -ones(ny>0, 1);    %% dummy entry corresponding to linear cost row in A (in MINOS)
+      muLB - muUB
+    ];
+else
+    mu_l = [];
+    mu_u = [];
+    muLB = [];
+    muUB = [];
+    pimul = [];
+end
 
 mu = struct( ...
   'var', struct('l', muLB, 'u', muUB), ...
@@ -257,9 +272,4 @@ results = mpc;
     results.om, results.x, results.mu, results.f] = ...
         deal(bus, branch, gen, om, x, mu, f);
 
-pimul = [
-  mu_l - mu_u;
- -ones(ny>0, 1);    %% dummy entry corresponding to linear cost row in A (in MINOS)
-  muLB - muUB
-];
 raw = struct('xr', x, 'pimul', pimul, 'info', info, 'output', output);
